fixed some code smells (#39)
* fixed some code smells

* swapped .equals expression to avoid NPE